--- a/views/recipe/showRecipe.html
+++ b/views/recipe/showRecipe.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="../../public/scripts/recipes scripts/showRecipe.js"></script>
+    <!-- ICONS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -57,6 +59,10 @@
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item">Time: 40 min</li>
                             <li class="list-group-item">Cal: 400</li>
+                            <li class="list-group-item">                       
+                                <i style="font-size:24px" class="fa">&#xf1e0;</i>
+                                Share this recipe with your friends
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -114,9 +120,26 @@
                                 </div>
                             </div>
                             <ul class=" text-left mt-5">
-                                <li class="mb-2">I LOVE IT!</li>
-                                <li class="mb-2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas architecto eveniet quidem dicta officia laborum consectetur fugit repellendus ipsa, voluptates quam, praesentium aliquid quia minus eos nostrum enim, aut libero.</li>
-                                <li class="mb-2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas architecto eveniet quidem dicta officia laborum consectetur fugit repellendus ipsa, voluptates quam, praesentium aliquid quia minus eos nostrum enim, aut libero.</li>
+                                <li class="mb-2">
+                                    I LOVE IT!
+                                    <i class="fa fa-edit"></i>
+                                    <i class="fa fa-remove" style="color: red"></i>
+                                </li>
+
+                                <li class="mb-2">
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                                    Voluptas architecto eveniet quidem dicta officia laborum consectetur fugit repellendus ipsa, 
+                                    voluptates quam, praesentium aliquid quia minus eos nostrum enim, aut libero.
+                                    <i class="fa fa-edit"></i>
+                                    <i class="fa fa-remove" style="color: red"></i>
+                                </li>
+                                <li class="mb-2">
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                                    Voluptas architecto eveniet quidem dicta officia laborum consectetur fugit repellendus ipsa, 
+                                    voluptates quam, praesentium aliquid quia minus eos nostrum enim, aut libero.
+                                    <i class="fa fa-edit"></i>
+                                    <i class="fa fa-remove" style="color: red"></i>
+                                </li>
 
                             </ul>
                         </div>
