added addRecipe WIP

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,3 +1,8 @@
+
+.addRecipe {
+    margin: 30px;
+}
+
 #addBtn {
     margin-right: 10px;
 }
@@ -19,4 +24,14 @@ footer {
 
 .copyright {
     margin: 10px 50px 10px 0;
+}
+
+.jumbotron {
+    padding: 20px;
+    margin: 0;
+}
+
+.my-2 {
+    background-color: #343a40;
+    border-color: #343a40;
 }
