--- a/views/index.html
+++ b/views/index.html
@@ -41,11 +41,12 @@
       </div>
       <div class="navbar navbar-dark bg-dark shadow-sm">
         <div class="container d-flex justify-content-between">
-          <a href="#" class="navbar-brand d-flex align-items-center">
+
+            <!-- BUTTON ADD NEW RECIPE -->
+          <!-- <a href="#" class="navbar-brand d-flex align-items-center">
             <img id="addBtn" src="https://www.iconsdb.com/icons/preview/white/plus-xxl.png" width="20" height="20" ></img>
             <strong>Add new recipe</strong>
-          
-          </a>
+          </a> -->
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -54,14 +55,13 @@
     </header>
     
     <main role="main">
-    
+    <!-- HERO SECTION -->
       <section class="jumbotron text-center">
         <div class="container">
-          <h1>Album example</h1>
-          <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
+          <h1>Pinrecipe</h1>
+          <p class="lead text-muted">Pinrecipe is your cookbook. Browse for yummy inspiration and add your own recipes.</p>
           <p>
-            <a href="#" class="btn btn-primary my-2">Main call to action</a>
-            <a href="#" class="btn btn-secondary my-2">Secondary action</a>
+            <a href="#" class="btn btn-secondary my-2">Add new recipe</a>
           </p>
         </div>
       </section>
@@ -89,6 +89,78 @@
                 </div>
               </div>
             </div>
+
+            <div class="col-md-3">
+                <div class="card mb-4 shadow-sm">
+                  <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="https://www.bbcgoodfood.com/sites/default/files/styles/recipe/public/recipe_images/recipe-image-legacy-id--458510_12.jpg?itok=EF_1bnMj"></img>
+                  <div class="card-body">
+                    <p class="card-text">Creamy mushroom soup</p>
+                    <div class="d-flex justify-content-between align-items-center">
+                      <small class="text-muted">350 Cal/ 50 mins</small>
+  
+                      <div class="btn-group">
+                        <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                        <!-- <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button> -->
+                      </div>
+  
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-md-3">
+                <div class="card mb-4 shadow-sm">
+                  <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="https://www.bbcgoodfood.com/sites/default/files/styles/recipe/public/recipe_images/recipe-image-legacy-id--458510_12.jpg?itok=EF_1bnMj"></img>
+                  <div class="card-body">
+                    <p class="card-text">Creamy mushroom soup</p>
+                    <div class="d-flex justify-content-between align-items-center">
+                      <small class="text-muted">350 Cal/ 50 mins</small>
+  
+                      <div class="btn-group">
+                        <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                        <!-- <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button> -->
+                      </div>
+  
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-md-3">
+                <div class="card mb-4 shadow-sm">
+                  <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="https://www.bbcgoodfood.com/sites/default/files/styles/recipe/public/recipe_images/recipe-image-legacy-id--458510_12.jpg?itok=EF_1bnMj"></img>
+                  <div class="card-body">
+                    <p class="card-text">Creamy mushroom soup</p>
+                    <div class="d-flex justify-content-between align-items-center">
+                      <small class="text-muted">350 Cal/ 50 mins</small>
+  
+                      <div class="btn-group">
+                        <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                        <!-- <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button> -->
+                      </div>
+  
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-md-3">
+                <div class="card mb-4 shadow-sm">
+                  <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="https://www.bbcgoodfood.com/sites/default/files/styles/recipe/public/recipe_images/recipe-image-legacy-id--458510_12.jpg?itok=EF_1bnMj"></img>
+                  <div class="card-body">
+                    <p class="card-text">Creamy mushroom soup</p>
+                    <div class="d-flex justify-content-between align-items-center">
+                      <small class="text-muted">350 Cal/ 50 mins</small>
+  
+                      <div class="btn-group">
+                        <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                        <!-- <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button> -->
+                      </div>
+  
+                    </div>
+                  </div>
+                </div>
+              </div>
 
             <div class="col-md-3">
                 <div class="card mb-4 shadow-sm">
