--- a/views/recipe/showRecipe.html
+++ b/views/recipe/showRecipe.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="../../public/scripts/recipes scripts/showRecipe.js"></script>
+    <script defer src="../../public/scripts/recipes scripts/showRecipe.js"></script>
     <!-- ICONS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Bootstrap CSS -->
@@ -35,7 +35,6 @@
                 </div>
             </div>
         </div>
-
         <div class="navbar navbar-dark bg-dark shadow-sm">
             <div class="container d-flex justify-content-end">
                 <button class="navbar-toggler collapsed" type="button" data-toggle="collapse"
