--- a/views/recipe/showRecipe.html
+++ b/views/recipe/showRecipe.html
@@ -58,7 +58,7 @@
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item">Time: 40 min</li>
                             <li class="list-group-item">Cal: 400</li>
-                            <li class="list-group-item">                       
+                            <li class="list-group-item">
                                 <i style="font-size:24px" class="fa">&#xf1e0;</i>
                                 Share this recipe with your friends
                             </li>
@@ -126,15 +126,17 @@
                                 </li>
 
                                 <li class="mb-2">
-                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-                                    Voluptas architecto eveniet quidem dicta officia laborum consectetur fugit repellendus ipsa, 
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                                    Voluptas architecto eveniet quidem dicta officia laborum consectetur fugit
+                                    repellendus ipsa,
                                     voluptates quam, praesentium aliquid quia minus eos nostrum enim, aut libero.
                                     <i class="fa fa-edit"></i>
                                     <i class="fa fa-remove" style="color: red"></i>
                                 </li>
                                 <li class="mb-2">
-                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-                                    Voluptas architecto eveniet quidem dicta officia laborum consectetur fugit repellendus ipsa, 
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                                    Voluptas architecto eveniet quidem dicta officia laborum consectetur fugit
+                                    repellendus ipsa,
                                     voluptates quam, praesentium aliquid quia minus eos nostrum enim, aut libero.
                                     <i class="fa fa-edit"></i>
                                     <i class="fa fa-remove" style="color: red"></i>
@@ -147,11 +149,6 @@
             </div>
         </div>
         </div>
-
-
-
-
-
     </main>
     <!-- BOOTSTRAP JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
@@ -163,10 +160,6 @@
         crossorigin="anonymous"></script>
 
 </body>
-
-
-
-
 
 <!-- Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
