Add footer to show recipe

--- a/views/recipe/showRecipe.html
+++ b/views/recipe/showRecipe.html
@@ -67,7 +67,7 @@
                 </div>
 
                 <!-- INGREDIENTS -->
-                <div class="col-md-6 mt-5">
+                <div class="col-md-6 mt-4">
                     <div class="text-center">
                         <h2>Ingredients</h2>
                         <ul class="text-left">
@@ -77,7 +77,7 @@
                         </ul>
 
                         <!-- DESCRIPTION -->
-                        <h2 class="mt-5">Description</h2>
+                        <h2 class="mt-4">Description</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                             Repellendus eius, dolorum facere iure commodi officia unde.
                             Deserunt alias voluptates neque corrupti velit, sequi ut, nobis, quae rem labore adipisci
@@ -85,11 +85,11 @@
                         </p>
 
                         <!-- LINK TO THE SOURCE -->
-                        <h2 class="mt-5">How to cook</h2>
+                        <h2 class="mt-4">How to cook</h2>
                         <a href="#">Some link</a>
 
                         <!-- Reviews -->
-                        <div class="mt-5" id="reviews">
+                        <div class="mt-4" id="reviews">
                             <button type="button" class="btn btn-secondary " data-toggle="modal"
                                 data-target="#exampleModal" data-whatever="@mdo">Write a review</button>
                             <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog"
@@ -141,7 +141,6 @@
                                     <i class="fa fa-edit"></i>
                                     <i class="fa fa-remove" style="color: red"></i>
                                 </li>
-
                             </ul>
                         </div>
                     </div>
@@ -150,6 +149,10 @@
         </div>
         </div>
     </main>
+
+    <footer>
+        <p class="copyright">&copy; 2020 Pinrecipe</p>
+    </footer>
     <!-- BOOTSTRAP JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
