--- a/views/user/userProfile.html
+++ b/views/user/userProfile.html
@@ -8,6 +8,9 @@
     <!-- BOOTSTRAP CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+    <!-- MY CSS -->
+    <link rel="stylesheet" href="../../public/styles/user/userProfile.css">
     <title>User Profile</title>
 </head>
 
@@ -43,39 +46,45 @@
     </header>
 
     <!-- USER PROFILE FORM -->
-    <div class="container">
-        <div class="py-5 text-center">
-            <img class="d-block mx-auto mb-4" src="https://picsum.photos/300" alt="">
-            <h2>User Profile</h2>
-        </div>
-
-        <div class="row">
-            <div class="col-md-12">
-                <form>
-                    <div class="row">
-                        <div class="col-md-6 mb-3">
-                            <label for="firstName">First name</label>
-                            <input type="text" class="form-control" id="firstName" placeholder="" value="">
-                        </div>
-                        <div class="col-md-6 mb-3">
-                            <label for="lastName">Last name</label>
-                            <input type="text" class="form-control" id="lastName" placeholder="" value="">
-                        </div>
-                    </div>
-
-                    <div class="mb-3">
-                        <label for="email">Email <span class="text-muted">(Optional)</span></label>
-                        <input type="email" class="form-control" id="email" placeholder="you@example.com">
-                    </div>
-                </form>
+    <main>
+        <div class="container">
+            <div class="py-5 text-center">
+                <img class="d-block mx-auto mb-4" src="https://cdn.pixabay.com/photo/2016/08/08/09/17/avatar-1577909_960_720.png" alt="">
+                <h2>User Profile</h2>
             </div>
 
-            <div class="col text-center">
-                <button class="btn btn-secondary">Update</button>
-                <button class="btn btn-danger">Delete Profile</button>
+            <div class="row">
+                <div class="col-md-12">
+                    <form>
+                        <div class="row">
+                            <div class="col-md-6 mb-3">
+                                <label for="firstName"></label>
+                                <input type="text" class="form-control" id="firstName" placeholder="First name" value="">
+                            </div>
+                            <div class="col-md-6 mb-3">
+                                <label for="lastName"></label>
+                                <input type="text" class="form-control" id="lastName" placeholder="Last name" value="">
+                            </div>
+                        </div>
 
-              </div>
+                        <div class="mb-3">
+                            <label for="email"></label>
+                            <input type="email" class="form-control" id="email" placeholder="Email">
+                        </div>
+                    </form>
+                </div>
+
+                <div class="col text-center">
+                    <button class="btn btn-secondary">Update</button>
+                    <button class="btn btn-danger">Delete Profile</button>
+                </div>
+            </div>
         </div>
+    </main>
+
+    <footer>
+        <p class="copyright">&copy; 2020 Pinrecipe</p>
+    </footer>
 
     <!-- BOOTSTRAP JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
