--- a/views/index.html
+++ b/views/index.html
@@ -21,6 +21,65 @@
 <!-- BOOTSTRAP ALBUM -->
 
 <body>
+
+    <!-- BOOTSTRAP MODAL -->
+
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Add new recipe</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form>
+            <div class="form-group">
+                <label>Recipe name:</label>
+                <input class="form-control col-form-label-sm" placeholder="Required">
+              </div>
+              <div class="form-group">
+                <label >Description:</label>
+                <input class="form-control col-form-label-sm" placeholder="Required">
+              </div>
+              <div class="form-group">
+                <label>Ingredients:</label>
+                <input class="form-control col-form-label-sm" placeholder="Required">
+              </div>
+              <div class="form-group">
+                <label>Link to image:</label>
+                <input class="form-control col-form-label-sm" placeholder="Required">
+              </div>
+              <div class="form-group">
+                <label>Link to cooking steps:</label>
+                <input class="form-control col-form-label-sm" placeholder="Required">
+              </div>
+
+              <p>This recipe is perfect for:</p>
+              <div class="form-group form-check">
+                <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                <label class="form-check-label" for="exampleCheck1">Breakfast</label>
+              </div>
+              <div class="form-group form-check">
+                <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                <label class="form-check-label" for="exampleCheck1">Lunch</label>
+              </div>
+              <div class="form-group form-check">
+                <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                <label class="form-check-label" for="exampleCheck1">Dinner</label>
+              </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary">Add recipe</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<!-- BOOTSTRAP ALBUM -->
   <header>
     <div class="collapse bg-dark" id="navbarHeader">
       <div class="container">
@@ -52,6 +111,7 @@
           </a> -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader"
           aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
+
           <span class="navbar-toggler-icon"></span>
         </button>
       </div>
@@ -66,7 +126,9 @@
         <p class="lead text-muted">Pinrecipe is your cookbook. Browse for yummy inspiration and add your own recipes.
         </p>
         <p>
-          <a href="#" class="btn btn-secondary my-2">Add new recipe</a>
+        <!-- OLD BUTTON:  <a href="#" class="btn btn-secondary my-2">Add new recipe</a> -->
+        <!-- modal button -->
+        <button type="button" class="btn btn-secondary my-2" data-toggle="modal" data-target="#exampleModal" data-whatever="@fat">Add new recipe</button>
         </p>
       </div>
     </section>
