--- a/views/user/userProfile.html
+++ b/views/user/userProfile.html
@@ -21,7 +21,9 @@
             <div class="container">
                 <div class="row nav justify-content-end">
                     <div class="col-sm-4 py-4">
-                        <h4 class="text-white nav justify-content-end mb-3">Profile</h4>
+                        <h4 class="text-white nav justify-content-end mb-3">
+                            <a href="#" class="text-white">Profile</a>
+                        </h4>
                         <ul class="list-unstyled">
                             <li class="nav-item nav justify-content-end"><a href="#" class="text-white">Breakfast</a>
                             </li>
