--- a/views/index.html
+++ b/views/index.html
@@ -80,7 +80,7 @@
 
 
 <!-- BOOTSTRAP ALBUM -->
-  <header>
+  <!-- <header>
     <div class="collapse bg-dark" id="navbarHeader">
       <div class="container">
         <div class="row">
@@ -96,26 +96,35 @@
               <li><a href="#" class="text-white">Follow on Twitter</a></li>
               <li><a href="#" class="text-white">Like on Facebook</a></li>
               <li><a href="#" class="text-white">Email me</a></li>
-            </ul>
+            </ul> -->
+    <!-- NAVIGATION -->
+    <header>
+      <div class="bg-dark collapse" id="navbarHeader">
+          <div class="container">
+              <div class="row nav justify-content-end">
+                  <div class="col-sm-4 py-4">
+                      <h4 class="text-white nav justify-content-end mb-3">Profile</h4>
+                      <ul class="list-unstyled">
+                          <li class="nav-item nav justify-content-end"><a href="#" class="text-white">Breakfast</a>
+                          </li>
+                          <li class="nav-item nav justify-content-end"><a href="#" class="text-white">Lunch</a></li>
+                          <li class="nav-item nav justify-content-end"><a href="#" class="text-white">Dinner</a></li>
+                          <li class="nav-item nav justify-content-end mt-2"><a href="#"
+                                  class="text-white font-weight-bold">Log Out</a></li>
+                      </ul>
+                  </div>
+              </div>
           </div>
-        </div>
       </div>
-    </div>
-    <div class="navbar navbar-dark bg-dark shadow-sm">
-      <div class="container d-flex justify-content-between">
-
-        <!-- BUTTON ADD NEW RECIPE -->
-        <!-- <a href="#" class="navbar-brand d-flex align-items-center">
-            <img id="addBtn" src="https://www.iconsdb.com/icons/preview/white/plus-xxl.png" width="20" height="20" ></img>
-            <strong>Add new recipe</strong>
-          </a> -->
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader"
-          aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
-
-          <span class="navbar-toggler-icon"></span>
-        </button>
+      <div class="navbar navbar-dark bg-dark shadow-sm">
+          <div class="container d-flex justify-content-end">
+              <button class="navbar-toggler collapsed" type="button" data-toggle="collapse"
+                  data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false"
+                  aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+              </button>
+          </div>
       </div>
-    </div>
   </header>
 
   <main role="main">
