--- a/public/styles/recipe/showRecipe.css
+++ b/public/styles/recipe/showRecipe.css
@@ -1,14 +1,14 @@
-html{
+html {
     height: 100%;
 }
 
-body{
+body {
     display: flex;
     flex-direction: column;
     height: 100%;
 }
 
-header{
+header {
     flex: 0 0 auto;
  }
  
@@ -16,7 +16,7 @@ main {
     flex: 1 0 auto;
 }
  
-footer{
+footer {
     width: 100%;
     flex: 0 0 auto;
     background-color: #343a40;
@@ -30,7 +30,8 @@ footer{
 }
 
 i {
-    margin-left: 5px;
+    margin: 4px 5px;
+
 }
  
  
