--- a/views/recipe/showRecipe.html
+++ b/views/recipe/showRecipe.html
@@ -55,17 +55,17 @@
     </header>
 
     <main>
-        <!-- PHOTO OF THE FOOD -->
+        <!-- PHOTO PLACEHOLDER -->
         <div class="container">
             <div class="row">
                 <div class="col-md-6 mt-5">
                     <div class="card">
-                        <img src="https://picsum.photos/200/200" id="photo" class="card-img-top" alt="...">
+                        <img src="" id="photo" class="card-img-top" alt="...">
 
-                        <!-- DETAILS -->
+                        <!-- DETAILS PLACEHOLDER-->
                         <ul class="list-group list-group-flush">
-                            <li class="list-group-item" id="time">Time: 40 min</li>
-                            <li class="list-group-item" id="calories">Cal: 400</li>
+                            <li class="list-group-item" id="time"></li>
+                            <li class="list-group-item" id="calories"></li>
                             <li class="list-group-item">
                                 <i id="popover" class="fa" data-toggle="popover" title="Copied!" data-content="Look! I found an AWESOME recipe! ...Link..." style="font-size:24px">&#xf1e0;</i>
                                 Share with friends
@@ -74,27 +74,19 @@
                     </div>
                 </div>
 
-                <!-- INGREDIENTS -->
+                <!-- INGREDIENTS PLACEHOLDER-->
                 <div class="col-md-6 mt-4">
                     <div class="text-center">
                         <h2>Ingredients</h2>
-                        <ul class="text-left" id="ingredients">
-                            <li>Eggs</li>
-                            <li>Flour</li>
-                            <li>Honey</li>
-                        </ul>
+                        <ul class="text-left" id="ingredients"></ul>
 
-                        <!-- DESCRIPTION -->
+                        <!-- DESCRIPTION PLACEHOLDER -->
                         <h2 class="mt-4">Description</h2>
-                        <p id="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Repellendus eius, dolorum facere iure commodi officia unde.
-                            Deserunt alias voluptates neque corrupti velit, sequi ut, nobis, quae rem labore adipisci
-                            similique!
-                        </p>
+                        <p id="description"></p>
 
                         <!-- LINK TO THE SOURCE -->
                         <h2 class="mt-4">How to cook</h2>
-                        <a href="#" id="link">Some link</a>
+                        <a href="#" id="link">Click here to see all steps</a>
 
                         <!-- Reviews -->
                         <div class="mt-4" id="reviews">
@@ -126,29 +118,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <ul class="text-left mt-5" id="reviews">
-                                <!-- <li class="mb-2">
-                                    I LOVE IT!
-                                    <i class="fa fa-edit"></i>
-                                    <i class="fa fa-remove" style="color: red"></i>
-                                </li>
-
-                                <li class="mb-2">
-                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                                    Voluptas architecto eveniet quidem dicta officia laborum consectetur fugit
-                                    repellendus ipsa,
-                                    voluptates quam, praesentium aliquid quia minus eos nostrum enim, aut libero.
-                                    <i class="fa fa-edit"></i>
-                                    <i class="fa fa-remove" style="color: red"></i>
-                                </li>
-                                <li class="mb-2">
-                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                                    Voluptas architecto eveniet quidem dicta officia laborum consectetur fugit
-                                    repellendus ipsa,
-                                    voluptates quam, praesentium aliquid quia minus eos nostrum enim, aut libero.
-                                    <i class="fa fa-edit"></i>
-                                    <i class="fa fa-remove" style="color: red"></i>
-                                </li> -->
+                            <ul class="text-left mt-5" id="reviewsUl">
                             </ul>
                         </div>
                     </div>
